add_subdirectory(2Dturbulence_multigrid)
add_subdirectory(6field-simple)
add_subdirectory(IMEX/advection-diffusion)
add_subdirectory(IMEX/advection-reaction)
add_subdirectory(IMEX/diffusion-nl)
add_subdirectory(IMEX/drift-wave)
add_subdirectory(IMEX/drift-wave-constraint)
add_subdirectory(advdiff)
add_subdirectory(advdiff2)
add_subdirectory(backtrace)
add_subdirectory(blob2d)
add_subdirectory(blob2d-outerloop)
add_subdirectory(blob2d-laplacexz)
add_subdirectory(boundary-conditions/advection)
add_subdirectory(conducting-wall-mode)
add_subdirectory(conduction)
add_subdirectory(conduction-snb)
add_subdirectory(constraints/alfven-wave)
add_subdirectory(constraints/laplace-dae)
add_subdirectory(dalf3)
add_subdirectory(eigen-box)
add_subdirectory(elm-pb)
add_subdirectory(em-drift)
add_subdirectory(fci-wave)
add_subdirectory(fci-wave-logn)
add_subdirectory(finite-volume/diffusion)
add_subdirectory(finite-volume/fluid)
add_subdirectory(finite-volume/test)
add_subdirectory(gas-compress)
add_subdirectory(gravity_reduced)
add_subdirectory(gyro-gem)
add_subdirectory(hasegawa-wakatani)
add_subdirectory(invertable_operator)
add_subdirectory(jorek-compare)
add_subdirectory(lapd-drift)
add_subdirectory(laplacexy/alfven-wave)
add_subdirectory(laplacexy/laplace_perp)
add_subdirectory(laplacexy/simple)
add_subdirectory(monitor)
add_subdirectory(monitor-newapi)
add_subdirectory(orszag-tang)
add_subdirectory(preconditioning/wave)
add_subdirectory(reconnect-2field)
add_subdirectory(shear-alfven-wave)
add_subdirectory(staggered_grid)
add_subdirectory(subsampling)
add_subdirectory(tokamak-2fluid)
add_subdirectory(uedge-benchmark)
add_subdirectory(wave-slab)
