add_subdirectory(6field-simple)
add_subdirectory(IMEX/advection-diffusion)
add_subdirectory(IMEX/advection-reaction)
add_subdirectory(IMEX/diffusion-nl)
add_subdirectory(IMEX/drift-wave)
add_subdirectory(IMEX/drift-wave-constraint)
add_subdirectory(blob2d)
add_subdirectory(blob2d-outerloop)
add_subdirectory(blob2d-laplacexz)
add_subdirectory(boutpp)
add_subdirectory(boundary-conditions/advection)
add_subdirectory(conducting-wall-mode)
add_subdirectory(conduction)
add_subdirectory(conduction-snb)
add_subdirectory(constraints/alfven-wave)
add_subdirectory(constraints/laplace-dae)
add_subdirectory(dalf3)
add_subdirectory(eigen-box)
add_subdirectory(elm-pb)
add_subdirectory(elm-pb-outerloop)
add_subdirectory(fci-wave)
add_subdirectory(finite-volume/diffusion)
add_subdirectory(finite-volume/fluid)
add_subdirectory(finite-volume/test)
add_subdirectory(gas-compress)
add_subdirectory(gyro-gem)
add_subdirectory(hasegawa-wakatani)
add_subdirectory(hasegawa-wakatani-3d)
add_subdirectory(invertable_operator)
add_subdirectory(laplacexy/alfven-wave)
add_subdirectory(laplacexy/laplace_perp)
add_subdirectory(laplacexy/simple)
add_subdirectory(laplacexy/simple-hypre)
add_subdirectory(monitor-newapi)
add_subdirectory(orszag-tang)
add_subdirectory(preconditioning/wave)
add_subdirectory(staggered_grid)
add_subdirectory(subsampling)
add_subdirectory(wave-slab)
