add_subdirectory(test-attribs)
add_subdirectory(test-command-args)
add_subdirectory(test-coordinates-initialization)
add_subdirectory(test-cyclic)
add_subdirectory(test-delp2)
add_subdirectory(test-griddata)
add_subdirectory(test-initial)
add_subdirectory(test-invertable-operator)
add_subdirectory(test-io)
add_subdirectory(test-io_hdf5)
add_subdirectory(test-laplace)
add_subdirectory(test-laplacexy-short)
add_subdirectory(test-slepc-solver)
add_subdirectory(test-solver)
add_subdirectory(test-stopCheck)
